# haredis-py

./: .gitignore  Dockerfile  README.md  build.sh  setup.cfg  setup.py
examples/redis-streams-simple/: main.py
haredis/: __init__.py
haredis/_aio_manager/: __init__.py  _aiomanager.py  _base.py  _exceptions.py  _interface.py
haredis/_aioclient/: __init__.py  _builder.py  _executor.py  _interface.py
haredis/_client/: __init__.py  _builder.py  _exceptions.py  _executor.py  _interface.py
haredis/_common/: _exceptions.py
haredis/_manager/: __init__.py  _base.py  _interface.py  _manager.py
haredis/_utils/: __init__.py  _set_up_logging.py  _util.py
