[metadata]
name = haredis-py
version = 0.0.1rc
author = Cevat Batuhan Tolon
author_email = tallon1997r@gmail.com
url = ""
description = haredis-py: Python Extension for Redis Lock-Release Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CLI, PWG-DQ, O2-DQ, autocomplete
license = BSD 3-Clause License
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development
    Topic :: System :: Distributed Computing
    Topic :: Scientific/Engineering
    Development Status :: 4 - Beta
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: AsyncIO

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    argcomplete==1.8.1

[options.packages.find]
include = haredis

[options.extras_require]
dev = 
    yapf==0.32.0
    flake8==4.0.1

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[mypy-joblib.*]
follow_imports = skip

[codespell]
skip = ./.git,./.mypy_cache,./doc/_build,./doc/auto_examples,./doc/modules/generated